--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "minigrep"
 version = "0.1.0"
 edition = "2021"
+description = "A collection of utilities used to search for lines containing a specific string."
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
